cmake_minimum_required(VERSION 3.17)

set(CMAKE_CXX_STANDARD 14)

include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})

add_subdirectory(proto)
target_include_directories(key_value_store_app_proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(utils)
add_subdirectory(key_value_store)
add_subdirectory(app)
add_subdirectory(client)

add_executable(key_value_store_app_tester key_value_store_app_test.cpp)
target_link_libraries(key_value_store_app_tester spdlog::spdlog_header_only)
target_link_libraries(key_value_store_app_tester key_value_store_app)
target_link_libraries(key_value_store_app_tester key_value_store_app_client)